--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,7 @@ jobs:
     steps:
       - checkout
       - run: npm ci
-      - snyk/install
-      - run:
-          command: snyk version
-          name: Which version of snyk is installed
-      - run:
-          command: snyk code test
-          name: Run code scan
+      - snyk/scan
     
   sonarqube:
       working_directory: ~/build
