--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ orbs:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  build:
+  snyk:
     docker:
       - image: cimg/node:lts
     steps:
@@ -46,5 +46,4 @@ jobs:
 workflows:
   main-workflow:
     jobs:
-      - build
       - sonarqube
